--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/subject?serverTimezone=UTC&characterEncoding=UTF-8
+spring.datasource.username=root  #root ?? ??
+spring.datasource.password=ssafy  #root ??? ????? ??
